Un mapa de estilos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-    <styling-lit>Hola</styling-lit>
+    <styling-lit></styling-lit>
+    <hr>
+    <style-map enabled=true style="color: blue;">Hola</style-map>
+    <hr>
 
 </body>
 
